inclui o z-index e posição fixada do background

--- a/src/ui/spinner/styles.css
+++ b/src/ui/spinner/styles.css
@@ -1,6 +1,6 @@
 .spinner {
   background-color: rgba(0, 0, 0, 0.5);
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   display: flex;
@@ -8,6 +8,7 @@
   justify-content: center;
   width: 100vw;
   height: 100vh;
+  z-index: 1;
 }
 
 .spinner img {
